--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,31 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+index:
+    path: /{_locale}/
+    controller: App\Controller\DefaultController::homeAction
+    requirements:
+        _locale: 'fr|en'
+
+blog:
+    path: /{_locale}/blog/list/{page}
+    controller: App\Controller\BlogController::listAction
+    requirements:
+        _locale: 'fr|en'
+
+# Route pour la déconnexion
+app_logout:
+    path: /{_locale}/logout
+    controller: App\Controller\SecurityController::logout
+    requirements:
+        _locale: 'fr|en'
+
+# Route pour le formulaire de connexion
+app_login:
+    path: /{_locale}/login
+    controller: App\Controller\SecurityController::login
+    requirements:
+        _locale: 'fr|en'
+
+
