--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,13 @@ parameters:
     my_parameter: 4
 
 services:
+
+    app.SpamFinder:
+        class: App\Services\SpamFinder
+        arguments:
+
+            $logger: '@logger'
+            $requestStack: '@request_stack'
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -16,6 +23,9 @@ services:
         class: Twig_Extensions_Extension_Text
         tags:
             - { name: twig.extension }
+
+
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
